Se carga pdf y video

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <div class="puntos puntos-top"></div>
               </div>
               <div class="col p-0">
-                <img class="mt-xl-5" alt="logo Sena" src="./assets/img.jpg" />
+                <img class="mt-xl-5" alt="logo Sena" src="./assets/portada.jpg" />
 
                 <div class="header__logo">
                   <img alt="logo Sena" src="./assets/logo-sena.svg" />
@@ -49,7 +49,7 @@
                   </div>
                   <div class="tarjeta__action">
                     <button class="boton video-btn" type="button" data-bs-toggle="modal"
-                      data-src="https://www.youtube.com/embed/Jfrjeg26Cwk" data-bs-target="#myModal">
+                      data-src="https://www.youtube.com/embed/FxoYocBnw0g" data-bs-target="#myModal">
                       <span>Reproducir video</span>
                       <img src="./assets/ico-flecha.svg" />
                     </button>
@@ -396,7 +396,7 @@
         }
       });
 
-      // when the modal is opened autoplay it  
+      // when the modal is opened autoplay it
       $('#myModal').on('shown.bs.modal', function (e) {
         // set the video src to autoplay and not to show related video. Youtube related video is like a box of chocolates... you never know what you're gonna get
         $("#video").attr('src', $videoSrc + "?autoplay=1&amp;modestbranding=1&amp;showinfo=0");
@@ -408,7 +408,7 @@
         $("#video").attr('src', $videoSrc);
       })
 
-      // document ready  
+      // document ready
     });
   </script>
 
